--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
@@ -52,6 +52,7 @@
     "supabase": "^1.145.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
+    "vite": "^5.0.12",
     "vitest": "^1.2.2"
   }
 }
